--- a/src/main/resources/org/example/some/secondLevel.fxml
+++ b/src/main/resources/org/example/some/secondLevel.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.SecondLevel">
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.SecondLevel">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1265.0" pickOnBounds="true" preserveRatio="true">
          <image>
