--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -48,6 +48,11 @@
             <Image url="@../../../images/firstLevel/objects/well.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="164.0" fitWidth="80.0" layoutX="30.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/firstLevel/objects/shop.jpg" />
+         </image>
+      </ImageView>
       <ImageView fx:id="feederView" fitHeight="102.0" fitWidth="142.0" layoutX="981.0" layoutY="551.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/firstLevel/objects/food.png" />
